--- a/Swoosh App/Base.lproj/Main.storyboard
+++ b/Swoosh App/Base.lproj/Main.storyboard
@@ -18,47 +18,67 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="welcomeScreenBG" translatesAutoresizingMaskIntoConstraints="NO" id="mo5-Pg-Y3i">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcomeScreenBG" translatesAutoresizingMaskIntoConstraints="NO" id="mo5-Pg-Y3i">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="j3f-fR-c6y">
-                                <rect key="frame" x="118" y="26" width="139" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="j3f-fR-c6y">
+                                <rect key="frame" x="128" y="40" width="119" height="20"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ON GOING ALL OUT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6j1-WG-Ly9">
-                                <rect key="frame" x="55" y="222" width="265" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ON GOING ALL OUT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6j1-WG-Ly9">
+                                <rect key="frame" x="62.5" y="233.5" width="250" height="35"/>
                                 <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="25"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="GO ALL IN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nuR-Fe-r2F">
-                                <rect key="frame" x="55" y="163" width="265" height="69"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GO ALL IN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nuR-Fe-r2F">
+                                <rect key="frame" x="62.5" y="165" width="250" height="68.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="Snu-yY-7MZ"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="50"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YIg-CT-nCo" customClass="BorderButton" customModule="Swoosh_App" customModuleProvider="target">
-                                <rect key="frame" x="16" y="598" width="343" height="55"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YIg-CT-nCo" customClass="BorderButton" customModule="Swoosh_App" customModuleProvider="target">
+                                <rect key="frame" x="16" y="607" width="343" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.54788732394366202" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="beS-gq-CTk"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
                                 <state key="normal" title="Get Started">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOJ-Dv-OHY">
-                                <rect key="frame" x="55" y="294" width="265" height="51"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOJ-Dv-OHY">
+                                <rect key="frame" x="62.5" y="273.5" width="250" height="41"/>
                                 <string key="text">Find a team in your city &amp; dominate the league	</string>
-                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="16"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="15"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="nuR-Fe-r2F" firstAttribute="top" secondItem="j3f-fR-c6y" secondAttribute="bottom" constant="105" id="1Bj-4W-DL6"/>
+                            <constraint firstItem="mo5-Pg-Y3i" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="8v3-Zo-d1J"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YIg-CT-nCo" secondAttribute="trailing" constant="16" id="IRD-ac-uVz"/>
+                            <constraint firstItem="6j1-WG-Ly9" firstAttribute="width" secondItem="nuR-Fe-r2F" secondAttribute="width" id="JHJ-xD-BBI"/>
+                            <constraint firstItem="YIg-CT-nCo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="JP7-lW-YVv"/>
+                            <constraint firstItem="mo5-Pg-Y3i" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="MeM-YS-cA1"/>
+                            <constraint firstItem="dOJ-Dv-OHY" firstAttribute="top" secondItem="6j1-WG-Ly9" secondAttribute="bottom" constant="5" id="RUA-CQ-RQf"/>
+                            <constraint firstItem="6j1-WG-Ly9" firstAttribute="top" secondItem="nuR-Fe-r2F" secondAttribute="bottom" id="V8C-8O-1oi"/>
+                            <constraint firstItem="j3f-fR-c6y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XG2-6N-iCT"/>
+                            <constraint firstItem="6j1-WG-Ly9" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YLW-Ks-Zhw"/>
+                            <constraint firstItem="j3f-fR-c6y" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="bTf-3j-XTA"/>
+                            <constraint firstItem="dOJ-Dv-OHY" firstAttribute="top" secondItem="6j1-WG-Ly9" secondAttribute="bottom" constant="5" id="eKM-Pp-jkR"/>
+                            <constraint firstItem="nuR-Fe-r2F" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gOd-iI-HJ3"/>
+                            <constraint firstItem="dOJ-Dv-OHY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gYw-Pa-dDR"/>
+                            <constraint firstItem="dOJ-Dv-OHY" firstAttribute="width" secondItem="6j1-WG-Ly9" secondAttribute="width" id="geJ-WK-C1F"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YIg-CT-nCo" secondAttribute="bottom" constant="10" id="tT2-HD-Su8"/>
+                            <constraint firstItem="mo5-Pg-Y3i" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="tz7-Ou-Oc1"/>
+                            <constraint firstItem="mo5-Pg-Y3i" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ut0-Mj-gjc"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
