added second screen - completed (used stack view)

--- a/Swoosh App/Base.lproj/Main.storyboard
+++ b/Swoosh App/Base.lproj/Main.storyboard
@@ -41,7 +41,7 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YIg-CT-nCo" customClass="BorderButton" customModule="Swoosh_App" customModuleProvider="target">
                                 <rect key="frame" x="16" y="607" width="343" height="50"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.54788732394366202" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.65352112676056351" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="beS-gq-CTk"/>
                                 </constraints>
@@ -84,10 +84,109 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53.600000000000001" y="26.53673163418291"/>
+            <point key="canvasLocation" x="-7359" y="-630"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="uqU-KY-tNY">
+            <objects>
+                <viewController id="kg7-qf-mhf" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nTE-MG-u3v">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="desiredLeagueBG" translatesAutoresizingMaskIntoConstraints="NO" id="CNA-IJ-77z">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="lzC-IL-eOf">
+                                <rect key="frame" x="0.0" y="40" width="375" height="97.5"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Gnv-rY-DJP">
+                                        <rect key="frame" x="128" y="0.0" width="119" height="20"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Desired League" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqw-6j-RMP">
+                                        <rect key="frame" x="114.5" y="70" width="146.5" height="27.5"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="tS4-0N-Sek">
+                                <rect key="frame" x="16" y="187.5" width="343" height="186"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FYu-q4-ZbI" customClass="BorderButton" customModule="Swoosh_App" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="50"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.65352112671690132" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="eXH-zm-PeH"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
+                                        <state key="normal" title="Mens">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9An-RN-IuH" customClass="BorderButton" customModule="Swoosh_App" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="68" width="343" height="50"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.65352112671690132" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="7rM-4Q-2iG"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
+                                        <state key="normal" title="Womens">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4iP-k0-XHq" customClass="BorderButton" customModule="Swoosh_App" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="136" width="343" height="50"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.65352112671690132" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="awx-n1-5dX"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
+                                        <state key="normal" title="Co-ed">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YlT-gc-esd" customClass="BorderButton" customModule="Swoosh_App" customModuleProvider="target">
+                                <rect key="frame" x="16" y="597" width="343" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.65352112671690132" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="cfN-Ba-QS3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
+                                <state key="normal" title="Next">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="eOh-i8-E2Z" firstAttribute="trailing" secondItem="tS4-0N-Sek" secondAttribute="trailing" constant="16" id="2Zf-Iv-Z2V"/>
+                            <constraint firstItem="lzC-IL-eOf" firstAttribute="leading" secondItem="eOh-i8-E2Z" secondAttribute="leading" id="8Du-tZ-Hdn"/>
+                            <constraint firstItem="tS4-0N-Sek" firstAttribute="top" secondItem="lzC-IL-eOf" secondAttribute="bottom" constant="50" id="Cp9-3b-V8k"/>
+                            <constraint firstItem="eOh-i8-E2Z" firstAttribute="bottom" secondItem="YlT-gc-esd" secondAttribute="bottom" constant="20" id="Grv-sY-lM4"/>
+                            <constraint firstItem="eOh-i8-E2Z" firstAttribute="trailing" secondItem="YlT-gc-esd" secondAttribute="trailing" constant="16" id="Jx2-pa-ne4"/>
+                            <constraint firstItem="CNA-IJ-77z" firstAttribute="bottom" secondItem="eOh-i8-E2Z" secondAttribute="bottom" id="OU6-aX-9eD"/>
+                            <constraint firstItem="tS4-0N-Sek" firstAttribute="leading" secondItem="eOh-i8-E2Z" secondAttribute="leading" constant="16" id="Op5-fr-pKj"/>
+                            <constraint firstItem="lzC-IL-eOf" firstAttribute="top" secondItem="eOh-i8-E2Z" secondAttribute="top" constant="20" id="WAb-6B-HJn"/>
+                            <constraint firstItem="eOh-i8-E2Z" firstAttribute="trailing" secondItem="lzC-IL-eOf" secondAttribute="trailing" id="Y7g-Bg-0y8"/>
+                            <constraint firstItem="YlT-gc-esd" firstAttribute="leading" secondItem="eOh-i8-E2Z" secondAttribute="leading" constant="16" id="aYq-T3-q7V"/>
+                            <constraint firstItem="CNA-IJ-77z" firstAttribute="trailing" secondItem="eOh-i8-E2Z" secondAttribute="trailing" id="b7Y-kM-5K8"/>
+                            <constraint firstItem="CNA-IJ-77z" firstAttribute="top" secondItem="nTE-MG-u3v" secondAttribute="top" id="n3l-If-1o2"/>
+                            <constraint firstItem="CNA-IJ-77z" firstAttribute="leading" secondItem="eOh-i8-E2Z" secondAttribute="leading" id="zp6-zj-nOv"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="eOh-i8-E2Z"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ugm-Lt-nOO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-6686" y="-630"/>
         </scene>
     </scenes>
     <resources>
+        <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
         <image name="welcomeScreenBG" width="414" height="736"/>
     </resources>
