added third/final screen - completed

--- a/Swoosh App/Base.lproj/Main.storyboard
+++ b/Swoosh App/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YIg-CT-nCo" customClass="BorderButton" customModule="Swoosh_App" customModuleProvider="target">
-                                <rect key="frame" x="16" y="607" width="343" height="50"/>
+                                <rect key="frame" x="16" y="597" width="343" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.65352112676056351" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="beS-gq-CTk"/>
@@ -75,7 +75,7 @@
                             <constraint firstItem="nuR-Fe-r2F" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gOd-iI-HJ3"/>
                             <constraint firstItem="dOJ-Dv-OHY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gYw-Pa-dDR"/>
                             <constraint firstItem="dOJ-Dv-OHY" firstAttribute="width" secondItem="6j1-WG-Ly9" secondAttribute="width" id="geJ-WK-C1F"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YIg-CT-nCo" secondAttribute="bottom" constant="10" id="tT2-HD-Su8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YIg-CT-nCo" secondAttribute="bottom" constant="20" id="tT2-HD-Su8"/>
                             <constraint firstItem="mo5-Pg-Y3i" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="tz7-Ou-Oc1"/>
                             <constraint firstItem="mo5-Pg-Y3i" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ut0-Mj-gjc"/>
                         </constraints>
@@ -156,7 +156,7 @@
                                     <constraint firstAttribute="height" constant="50" id="cfN-Ba-QS3"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
-                                <state key="normal" title="Next">
+                                <state key="normal" title="NEXT">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
@@ -184,8 +184,98 @@
             </objects>
             <point key="canvasLocation" x="-6686" y="-630"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="FHy-ed-vTQ">
+            <objects>
+                <viewController id="JiQ-AQ-spF" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VTX-6B-bE6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="beginnerBallerBG" translatesAutoresizingMaskIntoConstraints="NO" id="MuZ-pN-gNH">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="TFF-Y0-R4h">
+                                <rect key="frame" x="0.0" y="40" width="375" height="97.5"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="swooshLogo" translatesAutoresizingMaskIntoConstraints="NO" id="0Pw-yN-QUQ">
+                                        <rect key="frame" x="128" y="0.0" width="119" height="20"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I am a " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H68-ze-QJ0">
+                                        <rect key="frame" x="156.5" y="70" width="62.5" height="27.5"/>
+                                        <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="ZMR-rb-VWg">
+                                <rect key="frame" x="16" y="187.5" width="343" height="50"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wdr-K2-vwb" customClass="BorderButton" customModule="Swoosh_App" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="155.5" height="50"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.65352112669999995" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="mMG-Lx-ZgF"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
+                                        <state key="normal" title="Beginner">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LG6-sk-TYV" customClass="BorderButton" customModule="Swoosh_App" customModuleProvider="target">
+                                        <rect key="frame" x="187.5" y="0.0" width="155.5" height="50"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.65352112669999995" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="uw1-T1-t4h"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
+                                        <state key="normal" title="Baller">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ee-yt-qdN" customClass="BorderButton" customModule="Swoosh_App" customModuleProvider="target">
+                                <rect key="frame" x="16" y="597" width="343" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.65352112669999995" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="AhW-pA-Le2"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="ILZ-En-Ret"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="20"/>
+                                <state key="normal" title="FINISH">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="2fe-f2-xDG" firstAttribute="bottom" secondItem="1Ee-yt-qdN" secondAttribute="bottom" constant="20" id="5oF-gJ-5gc"/>
+                            <constraint firstItem="MuZ-pN-gNH" firstAttribute="leading" secondItem="2fe-f2-xDG" secondAttribute="leading" id="6ey-Xg-VPh"/>
+                            <constraint firstItem="MuZ-pN-gNH" firstAttribute="trailing" secondItem="2fe-f2-xDG" secondAttribute="trailing" id="C2U-wB-mJN"/>
+                            <constraint firstItem="MuZ-pN-gNH" firstAttribute="bottom" secondItem="2fe-f2-xDG" secondAttribute="bottom" id="DVe-RB-F36"/>
+                            <constraint firstItem="TFF-Y0-R4h" firstAttribute="leading" secondItem="2fe-f2-xDG" secondAttribute="leading" id="FKt-xK-Cqo"/>
+                            <constraint firstItem="MuZ-pN-gNH" firstAttribute="top" secondItem="VTX-6B-bE6" secondAttribute="top" id="Fb0-Xe-oMo"/>
+                            <constraint firstItem="TFF-Y0-R4h" firstAttribute="top" secondItem="2fe-f2-xDG" secondAttribute="top" constant="20" id="Gi1-eU-iDd"/>
+                            <constraint firstItem="2fe-f2-xDG" firstAttribute="trailing" secondItem="1Ee-yt-qdN" secondAttribute="trailing" constant="16" id="HXY-Rt-ElJ"/>
+                            <constraint firstItem="ZMR-rb-VWg" firstAttribute="leading" secondItem="2fe-f2-xDG" secondAttribute="leading" constant="16" id="Ila-2p-j3P"/>
+                            <constraint firstItem="2fe-f2-xDG" firstAttribute="trailing" secondItem="ZMR-rb-VWg" secondAttribute="trailing" constant="16" id="Rli-AU-Qd4"/>
+                            <constraint firstItem="ZMR-rb-VWg" firstAttribute="top" secondItem="TFF-Y0-R4h" secondAttribute="bottom" constant="50" id="gxd-dC-Hhp"/>
+                            <constraint firstItem="2fe-f2-xDG" firstAttribute="trailing" secondItem="TFF-Y0-R4h" secondAttribute="trailing" id="oG7-J2-RRa"/>
+                            <constraint firstItem="1Ee-yt-qdN" firstAttribute="leading" secondItem="2fe-f2-xDG" secondAttribute="leading" constant="16" id="y3c-qb-mYa"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2fe-f2-xDG"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="dTc-JO-EI4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eHm-kc-4XM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-6031" y="-630"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
         <image name="welcomeScreenBG" width="414" height="736"/>
