--- a/Swoosh App/Base.lproj/Main.storyboard
+++ b/Swoosh App/Base.lproj/Main.storyboard
@@ -49,6 +49,9 @@
                                 <state key="normal" title="Get Started">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <segue destination="kg7-qf-mhf" kind="show" id="I47-iH-vr2"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOJ-Dv-OHY">
                                 <rect key="frame" x="62.5" y="238.5" width="250" height="41"/>
@@ -160,6 +163,17 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="okh-Ob-6hX">
+                                <rect key="frame" x="16" y="30" width="30" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="9yZ-bW-GNw"/>
+                                    <constraint firstAttribute="width" constant="30" id="DNv-uq-Om1"/>
+                                </constraints>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="qhK-e4-fAX" kind="unwind" unwindAction="unWindFromLeagueVCWithUnWindSeague:" id="UhH-3L-suo"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -168,6 +182,7 @@
                             <constraint firstItem="tS4-0N-Sek" firstAttribute="top" secondItem="lzC-IL-eOf" secondAttribute="bottom" constant="50" id="Cp9-3b-V8k"/>
                             <constraint firstItem="eOh-i8-E2Z" firstAttribute="bottom" secondItem="YlT-gc-esd" secondAttribute="bottom" constant="20" id="Grv-sY-lM4"/>
                             <constraint firstItem="eOh-i8-E2Z" firstAttribute="trailing" secondItem="YlT-gc-esd" secondAttribute="trailing" constant="16" id="Jx2-pa-ne4"/>
+                            <constraint firstItem="okh-Ob-6hX" firstAttribute="top" secondItem="nTE-MG-u3v" secondAttribute="topMargin" constant="10" id="Mtk-KB-k4j"/>
                             <constraint firstItem="CNA-IJ-77z" firstAttribute="bottom" secondItem="eOh-i8-E2Z" secondAttribute="bottom" id="OU6-aX-9eD"/>
                             <constraint firstItem="tS4-0N-Sek" firstAttribute="leading" secondItem="eOh-i8-E2Z" secondAttribute="leading" constant="16" id="Op5-fr-pKj"/>
                             <constraint firstItem="lzC-IL-eOf" firstAttribute="top" secondItem="eOh-i8-E2Z" secondAttribute="top" constant="20" id="WAb-6B-HJn"/>
@@ -175,12 +190,14 @@
                             <constraint firstItem="YlT-gc-esd" firstAttribute="leading" secondItem="eOh-i8-E2Z" secondAttribute="leading" constant="16" id="aYq-T3-q7V"/>
                             <constraint firstItem="CNA-IJ-77z" firstAttribute="trailing" secondItem="eOh-i8-E2Z" secondAttribute="trailing" id="b7Y-kM-5K8"/>
                             <constraint firstItem="CNA-IJ-77z" firstAttribute="top" secondItem="nTE-MG-u3v" secondAttribute="top" id="n3l-If-1o2"/>
+                            <constraint firstItem="okh-Ob-6hX" firstAttribute="leading" secondItem="eOh-i8-E2Z" secondAttribute="leading" constant="16" id="uHb-nJ-8x2"/>
                             <constraint firstItem="CNA-IJ-77z" firstAttribute="leading" secondItem="eOh-i8-E2Z" secondAttribute="leading" id="zp6-zj-nOv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="eOh-i8-E2Z"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ugm-Lt-nOO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="qhK-e4-fAX" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-6686" y="-630"/>
         </scene>
@@ -275,6 +292,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
